[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Andurian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/day03/day03.rs"

[dependencies]
