[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Andurian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/common/common.rs"

[[bin]]
name = "day01"
path = "src/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/day03/day03.rs"

[[bin]]
name = "day04"
path = "src/day04/day04.rs"

[[bin]]
name = "day05"
path = "src/day05/day05.rs"

[[bin]]
name = "day06"
path = "src/day06/day06.rs"

[[bin]]
name = "day07"
path = "src/day07/day07.rs"

[[bin]]
name = "day08"
path = "src/day08/day08.rs"

[[bin]]
name = "day09"
path = "src/day09/day09.rs"

[[bin]]
name = "day10"
path = "src/day10/day10.rs"

[[bin]]
name = "day11"
path = "src/day11/day11.rs"

[[bin]]
name = "day12"
path = "src/day12/day12.rs"

[[bin]]
name = "day13"
path = "src/day13/day13.rs"

[[bin]]
name = "day14"
path = "src/day14/day14.rs"

[[bin]]
name = "day15"
path = "src/day15/day15.rs"

[[bin]]
name = "day16"
path = "src/day16/day16.rs"

[dependencies]
substring = "^1.4.0"
nalgebra = "^0.18"
image = "^0.23"
imageproc = "^0.22"
modinverse = "^0.1.1"
regex = "^1.4.2"
lazy_static = "^1.4.0"